third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/eq/unknown_field_attribute.rs
#[derive(derive_more::Eq)]
struct Foo(#[eq(unknown)] i32);

impl PartialEq for Foo {
    fn eq(&self, _: &Self) -> bool {
        unimplemented!()
    }
}

#[derive(derive_more::Eq)]
enum Enum {
    Bar { #[eq(unknown)] i: i32 },
}

impl PartialEq for Enum {
    fn eq(&self, _: &Self) -> bool {
        unimplemented!()
    }
}

fn main() {}
